// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal Form renders properly 1`] = `
<form
  class="form-horizontal"
>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="name"
    >
      Name
    </label>
    <div
      class="col-sm-9"
    >
      <input
        class="form-control"
        id="name"
        type="text"
      />
      <span
        class="help-block"
      >
        Enter your name
      </span>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="address"
    >
      Address
    </label>
    <div
      class="col-sm-9"
    >
      <input
        class="form-control"
        disabled=""
        id="address"
        type="address"
      />
      <span
        class="help-block"
      >
        Enter your address
      </span>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="city"
    >
      City
    </label>
    <div
      class="col-sm-9"
    >
      <input
        class="form-control"
        disabled=""
        id="city"
        type="text"
      />
      <span
        class="help-block"
      >
        Enter your city
      </span>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="email"
    >
      Email
    </label>
    <div
      class="col-sm-9"
    >
      <input
        class="form-control"
        disabled=""
        id="email"
        type="email"
      />
      <span
        class="help-block"
      >
        Enter a valid email address
      </span>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="url"
    >
      My meeting URL
    </label>
    <div
      class="col-sm-9"
    >
      <span
        class="input-group"
      >
        <input
          class="form-control"
          id="url"
          type="url"
        />
        <span
          class="input-group-btn"
        >
          <button
            class="btn btn-default"
            type="button"
          >
            Copy URL
          </button>
        </span>
      </span>
      <span
        class="help-block"
      >
        Enter a valid URL
      </span>
    </div>
  </div>
  <div
    class="row"
    style="padding-top: 10px; padding-bottom: 10px;"
  >
    <div
      class="col-sm-9 col-sm-offset-3"
    >
      <span>
        <button
          class="btn btn-primary"
          type="button"
        >
          Save
        </button>
      </span>
      <span>
        <button
          class="btn btn-default"
          type="button"
        >
          Cancel
        </button>
      </span>
    </div>
  </div>
</form>
`;

exports[`Inline Form renders properly 1`] = `
<form
  class="form-inline"
>
  <div
    class="form-group"
    placeholder="Email"
  >
    <input
      class="form-control"
      id="email"
      placeholder="Email"
      type="email"
    />
  </div>
  <div
    class="form-group"
    placeholder="Password"
  >
    <input
      class="form-control"
      id="password"
      placeholder="Password"
      type="password"
    />
  </div>
  <button
    class="btn btn-primary"
    type="button"
  >
    Log In
  </button>
</form>
`;

exports[`Input Groups render properly 1`] = `
<form
  class=""
>
  <div
    class="row"
  >
    <div
      class=""
    >
      <div
        class="form-group"
      >
        <span
          class="input-group"
        >
          <span
            class="input-group-addon"
          >
            @
          </span>
          <input
            class="form-control"
            id="control-1"
            type="text"
          />
        </span>
      </div>
      <div
        class="form-group"
      >
        <span
          class="input-group"
        >
          <input
            class="form-control"
            id="control-2"
            type="text"
          />
          <span
            class="input-group-addon"
          >
            .00
          </span>
        </span>
      </div>
      <div
        class="form-group"
      >
        <span
          class="input-group"
        >
          <span
            class="input-group-addon"
          >
            $
          </span>
          <input
            class="form-control"
            id="control-3"
            type="text"
          />
          <span
            class="input-group-addon"
          >
            .00
          </span>
        </span>
      </div>
      <div
        class="form-group"
      >
        <span
          class="input-group"
        >
          <input
            class="form-control"
            id="control-4"
            type="text"
          />
          <span
            class="input-group-addon"
          >
            <span
              aria-hidden="true"
              class="fa fa-music"
            />
          </span>
        </span>
      </div>
      <div
        class="form-group"
      >
        <span
          class="input-group"
        >
          <span
            class="input-group-btn"
          >
            <button
              class="btn btn-default"
              type="button"
            >
              Before
            </button>
          </span>
          <input
            class="form-control"
            id="control-5"
            type="text"
          />
        </span>
      </div>
      <div
        class="form-group"
      >
        <span
          class="input-group"
        >
          <input
            class="form-control"
            id="control-6"
            type="text"
          />
          <span
            class="dropdown input-group-btn"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle btn btn-default"
              id="input-dropdown-addon"
              role="button"
              type="button"
            >
              Action 
              <span
                class="caret"
              />
            </button>
            <ul
              aria-labelledby="input-dropdown-addon"
              class="dropdown-menu"
              role="menu"
            >
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Item
                </a>
              </li>
            </ul>
          </span>
        </span>
      </div>
      <div
        class="form-group"
      >
        <span
          class="input-group"
        >
          <span
            class="input-group-addon"
          >
            <input
              type="radio"
            />
          </span>
          <input
            class="form-control"
            id="control-7"
            type="text"
          />
        </span>
      </div>
      <div
        class="form-group"
      >
        <span
          class="input-group"
        >
          <span
            class="input-group-addon"
          >
            <input
              type="checkbox"
            />
          </span>
          <input
            class="form-control"
            id="control-8"
            type="text"
          />
        </span>
      </div>
    </div>
  </div>
</form>
`;

exports[`Modal Form renders properly 1`] = `null`;

exports[`Supported controls render properly 1`] = `
<form
  class=""
>
  <div
    class="form-group"
  >
    <label
      class="control-label"
      for="text"
    >
      Text
    </label>
    <input
      class="form-control"
      id="text"
      type="text"
    />
    <span
      class="help-block"
    >
      Help text
    </span>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
      for="email"
    >
      Email
    </label>
    <input
      class="form-control"
      id="email"
      type="email"
    />
    <span
      class="help-block"
    >
      Help text
    </span>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
      for="password"
    >
      Password
    </label>
    <input
      class="form-control"
      id="password"
      type="password"
    />
    <span
      class="help-block"
    >
      Help text
    </span>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
      for="file"
    >
      File
    </label>
    <input
      class=""
      id="file"
      type="file"
    />
    <span
      class="help-block"
    >
      Help text
    </span>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
      for="checkbox"
    >
      Checkbox
    </label>
    <div
      class="checkbox"
    >
      <label
        title=""
      >
        <input
          type="checkbox"
        />
        Checkbox
      </label>
    </div>
    <span
      class="help-block"
    >
      Help text
    </span>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
      for="radio"
    >
      Radio
    </label>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
        />
        Radio
      </label>
    </div>
    <span
      class="help-block"
    >
      Help text
    </span>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
      for="checkboxGroup"
    >
      Checkbox Group
    </label>
    <div>
      <label
        class="checkbox-inline"
        title=""
      >
        <input
          type="checkbox"
        />
        1
      </label>
      <label
        class="checkbox-inline"
        title=""
      >
        <input
          type="checkbox"
        />
        2
      </label>
      <label
        class="checkbox-inline"
        title=""
      >
        <input
          type="checkbox"
        />
        3
      </label>
    </div>
    <span
      class="help-block"
    >
      Help text
    </span>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
      for="radioGroup"
    >
      Radio Group
    </label>
    <div>
      <label
        class="radio-inline"
        title=""
      >
        <input
          name="radioGroup"
          type="radio"
        />
        1
      </label>
      <label
        class="radio-inline"
        title=""
      >
        <input
          name="radioGroup"
          type="radio"
        />
        2
      </label>
      <label
        class="radio-inline"
        title=""
      >
        <input
          name="radioGroup"
          type="radio"
        />
        3
      </label>
    </div>
    <span
      class="help-block"
    >
      Help text
    </span>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
      for="textarea"
    >
      Textarea
    </label>
    <textarea
      class="form-control"
      id="textarea"
    />
    <span
      class="help-block"
    >
      Help text
    </span>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
      for="static"
    >
      Static
    </label>
    <p
      class="form-control-static"
    >
      email@example.com
    </p>
    <span
      class="help-block"
    >
      Help text
    </span>
  </div>
</form>
`;

exports[`Vertical Form renders properly 1`] = `
<form
  class=""
>
  <div
    class="row"
  >
    <div
      class=""
    >
      <div
        class="form-group"
      >
        <label
          class="control-label"
          for="name"
        >
          Name
        </label>
        <input
          class="form-control"
          id="name"
          type="text"
        />
        <span
          class="help-block"
        >
          Enter your name
        </span>
      </div>
      <div
        class="form-group"
      >
        <label
          class="control-label"
          for="address"
        >
          Address
        </label>
        <input
          class="form-control"
          id="address"
          type="address"
        />
        <span
          class="help-block"
        >
          Enter your address
        </span>
      </div>
      <div
        class="form-group"
      >
        <label
          class="control-label"
          for="city"
        >
          City
        </label>
        <input
          class="form-control"
          id="city"
          type="text"
        />
        <span
          class="help-block"
        >
          Enter your city
        </span>
      </div>
      <div
        class="form-group"
      >
        <label
          class="control-label"
          for="email"
        >
          Email
        </label>
        <input
          class="form-control"
          id="email"
          type="email"
        />
        <span
          class="help-block"
        >
          Enter a valid email address
        </span>
      </div>
      <div
        class="form-group"
      >
        <label
          class="control-label"
          for="url"
        >
          My meeting URL
        </label>
        <span
          class="input-group"
        >
          <input
            class="form-control"
            id="url"
            type="url"
          />
          <span
            class="input-group-btn"
          >
            <button
              class="btn btn-default"
              type="button"
            >
              Copy URL
            </button>
          </span>
        </span>
        <span
          class="help-block"
        >
          Enter a valid URL
        </span>
      </div>
    </div>
  </div>
  <div
    class="row"
    style="padding-top: 10px; padding-bottom: 10px;"
  >
    <div
      class=""
    >
      <span>
        <button
          class="btn btn-primary"
          type="button"
        >
          Save
        </button>
      </span>
      <span>
        <button
          class="btn btn-default"
          type="button"
        >
          Cancel
        </button>
      </span>
    </div>
  </div>
</form>
`;
